Added enable preview to maven compiler plugin